# my_polyctf_task

./: .gitattributes  README.md  README_for_poly.md  command_for_replacement.sh  cool_dump.py  delete_cont.sh  draw_flag.py  push_git.sh
crypto/aes/: README.md  flag.enc  main.py  sub.py  task.py
crypto/blocks/: README.md  main.py  solve.py  task.txt
crypto/timestamp/: Dockerfile  README.md  docker-compose.yml  main.py  solve.py  start.sh
forensics/blue/: README.md  task.pcapng  task.py  ‌
forensics/mitm/: README.md
misc/Sanity check/: README.md
misc/Sanity check 2/: README.md
misc/bot/: Dockerfile  README.md  docker-compose.yml  main.py  ver.py
osint/barman/: README.md
osint/bartender/: README.md
osint/jokes/: README.md
ppc/chess/: Dockerfile  README.md  chess.py  docker-compose.yml  main.py  requirements.txt
ppc/cube/: Dockerfile  README.md  main.py  start.sh
ppc/easy_calc/: Dockerfile  README.md  docker-compose.yml  main.py  start.sh
ppc/guess/: Dockerfile  README.md  main.cpp  main.py  task
ppc/ocr/: README.md  main.py  start.sh
ppc/pxm/: Dockerfile  README.md  main.py  solve.py  start.sh
pwn/basic_bof/: Dockerfile  README.md  exp.py  flag.txt  start.sh  task
pwn/read_var/: Dockerfile  README.md  exp_hard.py  flag  start.sh
pwn/sbo/: Dockerfile  Lab1  README.md  start.sh
quest/quest_full1/: README.md
quest/quest_full2/: Dockerfile  Dockerfile.python  README.md  docker-compose.yml
quest/quest_full3/: Dockerfile.python  Dockerfile.ubuntu  (+5 more)
reverse/guess/: Cargo.toml  README.md  check.py  prog
reverse/guess/src/: main.rs
(+174 files in other folders)
